--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
                     boxShadow: {
                     },
                     colors: {
+                        'green': "#142C16"
                     },
                     backgroundColor: {
                     }
@@ -24,6 +25,6 @@
     </script>
 </head>
 <body>
-    
+    <main class="bg-"></main>
 </body>
 </html>
