--- a/index.html
+++ b/index.html
@@ -695,7 +695,7 @@
                     <p class="text-white text-xs lg:text-lg opacity-75 font-light mt-2">Website Visits</p>
                 </div>
                 <div class="hidden md:grid w-[45%]">
-                    <img src="./Images/Home/Landing-img.png" alt="">
+                    <img src="./Images/Home/decor.png" alt="">
                 </div>
             </div>
         </section>
