--- a/index.html
+++ b/index.html
@@ -690,11 +690,13 @@
             <h1
                 class="my-6 mb-12 text-yellowMedium w-full text-5xl md:text-4xl lg:text-7xl text-center lg:font-bold leading-[65px] md:leading-[55px] lg:leading-[85px] drop-shadow">
                 About Taksaal</h1>
-            <div class="flex md:items-center justify-between">
-                <div class="flex flex-col items-center lg:items-start w-full md:w-1/2 mt-6 lg:mt-0">
-                    <p class="text-white text-xs lg:text-lg opacity-75 font-light mt-2">Website Visits</p>
+            <div class="flex md:items-center justify-between h-full">
+                <div class="flex flex-col items-center lg:items-start w-full h-full md:w-1/2 mt-6 lg:mt-0">
+                    <p class="text-white text-xs lg:text-3xl opacity-75 font-light  h-full mt-2 lg:leading-[55px]">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a  <br> <br>
+
+                        Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum" (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of ethics, very popular during the Renaissance. </p>
                 </div>
-                <div class="hidden md:grid w-[45%]">
+                <div class="hidden md:grid w-[45%] -mr-[4.5%]">
                     <img src="./Images/Home/decor.png" alt="">
                 </div>
             </div>
