--- a/profile.html
+++ b/profile.html
@@ -212,56 +212,76 @@
             </ul>
         </div>
         <section class="w-full px-4 z-20 mt-10 lg:mt-0">
-            <div class="flex md:items-center justify-between">
-                <div class="hidden md:flex flex-col gap-10 items-center lg:items-start w-full md:w-1/2 mt-6 lg:mt-0">
+            <div class="flex flex-col-reverse md:flex-row md:items-center justify-between">
+                <div class="flex flex-col gap-10 items-center lg:items-start w-full md:w-1/2 mt-12 md:mt-6 lg:mt-0">
                     <div
-                        class="stats hidden md:grid grid-cols-1 md:grid-cols-3 border border-yellowMedium py-6 w-full lg:w-[550px] rounded-[35px] px-4 relative md:pt-6 lg:py-6">
+                        class="stats grid grid-cols-1 md:grid-cols-3 border border-yellowMedium py-6 w-full lg:w-[550px] rounded-[35px] px-4 relative md:pt-6 lg:py-6">
                         <p
                             class="absolute text-lightWhite bg-green top-0 left-12 px-2 -translate-y-1/2 text-xs lg:text-lg font-light">
                             Lokaan Da Naa</p>
                         <div class="flex flex-col items-start justify-center w-full">
-                            <input class="text-white text-xs lg:text-2xl opacity-75 font-light border-none outline-none bg-transparent p-2 w-[450px]" placeholder="Enter your name" value="Monkey D Luffy">
+                            <input
+                                class="text-lightWhite font-medium md:p-2 text-md lg:text-2xl opacity-75 font-light border-none outline-none bg-transparent w-[450px]"
+                                placeholder="Enter your name" value="Monkey D Luffy">
                         </div>
                     </div>
                     <div
-                        class="stats hidden md:grid grid-cols-1 md:grid-cols-3 border border-yellowMedium py-6 w-full lg:w-[550px] rounded-[35px] px-4 relative md:pt-6 lg:py-6">
+                        class="stats grid grid-cols-1 md:grid-cols-3 border border-yellowMedium py-6 w-full lg:w-[550px] rounded-[35px] px-4 relative md:pt-6 lg:py-6">
                         <p
                             class="absolute text-lightWhite bg-green top-0 left-12 px-2 -translate-y-1/2 text-xs lg:text-lg font-light">
                             E - Chitthi Pata</p>
                         <div class="flex flex-col items-start justify-center w-full">
-                            <input class="text-white text-xs lg:text-2xl opacity-75 font-light border-none outline-none bg-transparent p-2 w-[450px]" placeholder="Enter your name" value="Monkey@gmail.com">
+                            <input
+                                class="text-lightWhite font-medium md:p-2 text-md lg:text-2xl opacity-75 font-light border-none outline-none bg-transparent w-[450px]"
+                                placeholder="Enter your name" value="Monkey@gmail.com">
                         </div>
                     </div>
                     <div
-                        class="stats hidden md:grid grid-cols-1 md:grid-cols-3 border border-yellowMedium py-6 w-full lg:w-[550px] rounded-[35px] px-4 relative md:pt-6 lg:py-6">
+                        class="stats grid grid-cols-1 md:grid-cols-3 border border-yellowMedium py-6 w-full lg:w-[550px] rounded-[35px] px-4 relative md:pt-6 lg:py-6">
                         <p
                             class="absolute text-lightWhite bg-green top-0 left-12 px-2 -translate-y-1/2 text-xs lg:text-lg font-light">
                             Sanjog Nambar</p>
                         <div class="flex flex-col items-start justify-center w-full">
-                            <input class="text-white text-xs lg:text-2xl opacity-75 font-light border-none outline-none bg-transparent p-2 w-[450px]" placeholder="Enter your name" value="+91-79999 79999">
+                            <input
+                                class="text-lightWhite font-medium md:p-2 text-md lg:text-2xl opacity-75 font-light border-none outline-none bg-transparent w-[450px]"
+                                placeholder="Enter your name" value="+91-79999 79999">
                         </div>
                     </div>
                     <button
-                        class="hidden md:block bg-yellowMedium text-green font-bold px-8 py-4 w-[320px] my-12 flex items-center justify-between rounded-[60px] transition-all hover:bg-opacity-60 cursor-poitner z-20">
+                        class="hidden md:block bg-yellowMedium text-green font-bold px-8 py-4 w-[320px] lg:my-12 flex items-center justify-between rounded-[60px] transition-all hover:bg-opacity-60 cursor-poitner z-20">
                         Edit Your Profile Details
                         <!-- right arrow font awesome icon -->
                         <i class="fas fa-pen-to-square ml-12"></i>
                     </button>
 
                     <button
-                        class="bg-yellowMedium md:hidden text-green font-bold px-8 py-4 w-[300px] my-12 flex items-center justify-between rounded-[60px] transition-all hover:bg-opacity-60 cursor-poitner z-20">
+                        class="bg-yellowMedium md:hidden text-green font-bold px-8 py-4 w-[300px] flex items-center justify-between rounded-[60px] transition-all hover:bg-opacity-60 cursor-poitner z-20">
                         Edit Your Profile Details
                         <!-- right arrow font awesome icon -->
                         <i class="fas fa-pen-to-square"></i>
                     </button>
                 </div>
-                <div class="hidden md:grid w-[45%]">
+                <div class="grid w-full md:w-[55%] lg:w-[45%] md:ml-4 lg:ml-0 -mt-20 relative">
                     <img src="./Images/Profile/pfp.png" alt="">
+                    <div class="flex absolute bottom-0 md:bottom-5 lg:bottom-20 left-1/2 -translate-x-1/2 z-20 w-full justify-center items-center gap-3">
+                        <div class="flex items-center gap-2 bg-yellowMedium px-4 py-2 rounded-full bg-opacity-[35%]">
+                            <i class="fa-solid fa-coins text-lightWhite mb-1"></i>
+                            <p
+                                class="text-sm pt-1 text-lightWhite opacity-75 md:text-lg tracking-wider font-extrathin mb-1">
+                                1245 pts</p>
+                        </div>
+                        <div class="flex items-center gap-2 bg-yellowMedium px-4 py-2 rounded-full bg-opacity-[35%]">
+                            <i class="fa-solid fa-star text-lightWhite mb-1"></i>
+                            <p
+                                class="text-sm pt-1 text-lightWhite opacity-75 md:text-lg tracking-wider font-extrathin mb-1">
+                                12<sup>th</sup> Rank</p>
+                        </div>
+                    </div>
                 </div>
             </div>
             <h1
                 class="my-6 md:mt-12 lg:mb-12 lg:mt-0 md:mb-6 text-yellowMedium w-full text-3xl md:text-4xl lg:text-7xl text-center font-bold leading-[65px] md:leading-[55px] lg:leading-[85px] drop-shadow">
-                Arth De Pehlu Hor</h1>
+                Boli De Moti</h1>
             <div class="grid grid-cols-1 md:grid-cols-2 gap-6 mb-6 md:mb-12">
                 <div class="w-full bg-bgGreen rounded-lg md:rounded-2xl overflow-hidden shadow-xl relative">
                     <i
