--- a/profile.html
+++ b/profile.html
@@ -649,6 +649,23 @@
                     <i class="fas fa-arrow-right ml-4"></i>
                 </button>
             </div>
+            
+            <h1
+                class="mt-20 text-yellowMedium w-full text-2xl md:text-4xl lg:text-7xl text-center font-bold leading-[35px] md:leading-[55px] lg:leading-[85px] drop-shadow z-20">
+                Refer and Win
+            </h1>
+            <p
+                class="my-4 font-regular text-lightWhite text-xl z-20 md:text-2xl lg:text-4xl tracking-wide w-full text-center">
+                Dosto Nu Jodo, Inaam Gharo!
+            </p>
+            <div class="w-full flex items-center justify-center my-12 z-20">
+                    <button
+                        class="z-20 text-green bg-yellowMedium text-black text-sm md:text-base font-semibold py-3 rounded-full flex items-center gap-2 px-4 hover:bg-opacity-75 z-20">
+                        Referal Link: Modekey12345 
+                        <i class="fas fa-chevron-right mt-[1px]"></i>
+                    </button>
+                    <!-- Copy action trigger -->
+            </div>
         </section>
 
     </main>
