--- a/signup.html
+++ b/signup.html
@@ -53,7 +53,7 @@
 </head>
 
 <body>
-    <div class="main bg-lightestGreen w-full min-h-screen grid grid-cols-12">
+    <div class="main bg-lightestGreen w-full min-h-screen flex flex-col items-center justify-center lg:grid lg:grid-cols-12">
         <div class="left w-full h-full lg:col-span-3 left-bg hidden lg:grid place-items-center">
             <div class="txt flex flex-col justify-center items-center w-full px-8 pr-12">
                 <h1
@@ -76,59 +76,60 @@
                 </p>
             </div>
         </div>
-        <div class="w-full grid place-items-center col-span-12 lg:col-span-9 px-12 lg:px-32 py-12">
-            <img src="" alt="">
+        
+        <img src="./Images/Common/Taksaal-Dark.png" alt="" class="mt-12 md:mt-0 md:h-20 lg:hidden">
+        <div class="w-full lg:grid lg:place-items-center lg:col-span-9 px-4 md:px-12 lg:px-32 py-12">
             <div
-                class="box w-full h-auto bg-white bg-opacity-50 rounded-[35px] drop-shadow-box px-12 flex flex-col gap-4 py-8">
+                class="box w-full h-auto bg-white bg-opacity-50 rounded-xl md:rounded-[35px] drop-shadow-box px-4 md:px-12 flex flex-col gap-4 py-4 md:py-8">
 
                 <h1
                     class="text-green w-full text-2xl md:text-xl lg:text-3xl font-medium leading-[35px] md:leading-[25px] lg:leading-[35px] drop-shadow z-20 pr-2">
                     Sign Up Now
                 </h1>
-                <div class="flex items-center gap-4 w-full">
-                    <div class="flex flex-col gap-2 w-1/2">
+                <div class="flex flex-col md:flex-row items-center gap-4 w-full">
+                    <div class="flex flex-col gap-2 w-full md:w-1/2">
                         <p class="w-full text-green text-lg font-medium">First name</p>
                         <input
-                            class="w-full bg-transparent h-12 border border-green rounded-xl text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
+                            class="w-full bg-transparent h-12 border border-green rounded-xl md:text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
                             type="text" placeholder="Enter your first name">
                     </div>
-                    <div class="flex flex-col gap-2 w-1/2">
+                    <div class="flex flex-col gap-2 w-full md:w-1/2">
                         <p class="w-full text-green text-lg font-medium">Last name</p>
                         <input
-                            class="w-full bg-transparent h-12 border border-green rounded-xl text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
+                            class="w-full bg-transparent h-12 border border-green rounded-xl md:text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
                             type="text" placeholder="Enter your last name">
                     </div>
                 </div>
-                <div class="flex items-center gap-4 w-full">
-                    <div class="flex flex-col gap-2 w-1/2">
+                <div class="flex flex-col md:flex-row items-center gap-4 w-full">
+                    <div class="flex flex-col gap-2 w-full md:w-1/2">
                         <p class="w-full text-green text-lg font-medium">Email Address</p>
                         <input
-                            class="w-full bg-transparent h-12 border border-green rounded-xl text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
+                            class="w-full bg-transparent h-12 border border-green rounded-xl md:text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
                             type="text" placeholder="Enter your Email Address">
                     </div>
-                    <div class="flex flex-col gap-2 w-1/2">
+                    <div class="flex flex-col gap-2 w-full md:w-1/2">
                         <p class="w-full text-green text-lg font-medium">Phone No</p>
                         <input
-                            class="w-full bg-transparent h-12 border border-green rounded-xl text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
+                            class="w-full bg-transparent h-12 border border-green rounded-xl md:text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
                             type="text" placeholder="Enter your Phone No">
                     </div>
                 </div>
-                <div class="flex items-center gap-4 w-full">
-                    <div class="flex flex-col gap-2 w-1/2">
+                <div class="flex flex-col md:flex-row items-center gap-4 w-full">
+                    <div class="flex flex-col gap-2 w-full md:w-1/2">
                         <p class="w-full text-green text-lg font-medium">Password</p>
                         <input
-                            class="w-full bg-transparent h-12 border border-green rounded-xl text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
+                            class="w-full bg-transparent h-12 border border-green rounded-xl md:text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
                             type="text" placeholder="Enter your Password">
                     </div>
-                    <div class="flex flex-col gap-2 w-1/2">
+                    <div class="flex flex-col gap-2 w-full md:w-1/2">
                         <p class="w-full text-green text-lg font-medium">Confirm Password</p>
                         <input
-                            class="w-full bg-transparent h-12 border border-green rounded-xl text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
+                            class="w-full bg-transparent h-12 border border-green rounded-xl md:text-xl px-2 font-medium placeholder-lightGreen placeholder-opacity-50 text-lightGreen outline-none"
                             type="text" placeholder="Enter your Confirm Password">
                     </div>
                 </div>
-                <div class="flex items-center gap-2 mt-4">
-                    <input type="checkbox" id="terms" class="checkbox-custom">
+                <div class="flex items-start gap-2 mt-4">
+                    <input type="checkbox" id="terms" class="checkbox-custom mt-2">
                     <label for="terms" class="text-green">
                         By creating an account, I agree to our 
                         <a href="#" class="text-bgGreen underline">Terms of use</a> and 
@@ -144,8 +145,8 @@
                     </label>
                 </div>
 
-                <div class="flex items-center gap-3 mt-6">
-                    <button class="bg-bgGreen text-white px-8 py-3 rounded-full text-lg font-medium hover:bg-green transition-colors">
+                <div class="flex flex-col md:flex-row items-center gap-3 mt-6">
+                    <button class="bg-bgGreen w-full md:w-auto text-white px-8 py-3 rounded-full text-lg font-medium hover:bg-green transition-colors">
                         Sign up
                     </button>
                     <p class="text-green">
